--- a/5EL272_Exercise_3_Motion_Predictions_v3_STUDENT.ipynb
+++ b/5EL272_Exercise_3_Motion_Predictions_v3_STUDENT.ipynb
@@ -2256,28 +2256,22 @@
         "\n",
         "\n",
         "1. **Motivation:** \n",
-        "I chose to focus on the hyperparameter tuning and minor architecture adjustments of the provided Transformer based model, using the paper \" Latent Variable Seqquential Set Transformer for Joint Multi-Agent Motion Prediction\" as insperation for reasonable hyperparameter ranges. The reason for this approach is that the baseline model is already designed around Transformer architecture, which is well suited for motion prediction due to its ability to model dependecies using attention and to process sequences efficiently in parallel.\n",
         "\n",
-        "Compared to an RNN  based approach, Transformer can capture long-range temporal dependecies without strictly sequential computation\n",
+        "I chose to focus on the hyperparameter tuning and minor architecture adjustments of the provided Transformer based model, using the paper \n",
+        "\"Latent Variable Sequential Set Transformer for Joint Multi-Agent Motion Prediction\" as insperation for reasonable hyperparameter ranges. The reason for this approach is that the baseline model is already designed around Transformer architecture, which is well suited for motion prediction due to its ability to model dependecies using attention and to process sequences efficiently in parallel.\n",
         "\n",
+        "Compared to an RNN  based approach, Transformer can capture long-range temporal dependecies without strictly sequential computation, which can simplify training and improve efficiency.\n",
+        "Additionally, the architecture in this lab explicitly combines temporal encoding with positional encoding to represent each agent trajectory over time, togheter with social attention layers that models interactions between agents in the scene. This makes the Transformer a natural choice for multi-agent motion prediction, were both temporal dynamics and agent-to-agent relationships matter.\n",
         "\n",
+        "A potential drawback of Transformer-based models is their higher computational cost compared to simpler architectures  such as RNNs. Since inference latency is important and the dataset in this lab is relatively small, we keep the model capacity moderate limited hidden dimension and number of attention heads and rely on early stopping to reduce overfitting. \n",
+        "This aims to balance prediction performence ADE with model complexity and runtime.\n",
         "\n",
+        "Given the limited scope and time of the lab, tuning existing Transformer architecture was a practical way to aim for improved ADE while staying close to the design choices motivated by the reference paper.\n",
         "\n",
-        "\n",
-        "**2. Temporal Encoding**\n",
-        "\n",
-        "*   Each agent's trajectory (x, y coordinates over time) is treated as a sequence.\n",
-        "*   This sequence is fed into the `TemporalEncoder` layer.\n",
-        "*   Inside `TemporalEncoder`, a `keras_hub.layers.TransformerEncoder` is used.\n",
-        "We use a \"SinePositionEncoding\" as a positional encoding to capture the order of the temporal sequence\n",
-        "\n",
-        "**3. Social Layer**\n",
-        "\n",
-        "*   The output of the temporal encoding step is passed to the `SocialLayer`.\n",
-        "*   The `SocialLayer` uses another `keras_hub.layers.TransformerEncoder` to capture interactions between all agents at each time step.\n",
-        "*   This layer helps the model understand the spatial relationships between different agents in the scene.\n",
         "\n",
         "2. **Methodology:** Detail the steps you took to implement your model.\n",
+        "\n",
+        "\n",
         "3. **Performance:** Report the model's Average Displacement Error on the dataset; the eraining time; and the number of parameters in the model. As well as other performance parameters that can be relevant.\n",
         "4. **Comparative Analysis:** Do a comparative analysis beetween your model(s) and the provided model, what benefits and drawbacks exist between the studied models?\n"
       ]
