--- a/5EL272_Exercise_3_Motion_Predictions_v3_STUDENT Bonus TASK.ipynb
+++ b/5EL272_Exercise_3_Motion_Predictions_v3_STUDENT Bonus TASK.ipynb
@@ -2851,6 +2851,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "\n",
+        "## Results of same model and architecture but with Yaw added to input and architecture\n",
+        "\n",
         "![Skärmavbild 2025-12-26 kl. 16.26.14.png](<attachment:Skärmavbild 2025-12-26 kl. 16.26.14.png>)"
       ]
     },
