--- a/5EL272_Exercise_3_Motion_Predictions_v3_STUDENT.ipynb
+++ b/5EL272_Exercise_3_Motion_Predictions_v3_STUDENT.ipynb
@@ -1086,88 +1086,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "class MotionLoss1():\n",
-        "    def __init__(self):\n",
-        "        self.reg_loss = keras.losses.MeanAbsoluteError(reduction=None)\n",
-        "\n",
-        "    def get_agent_state(self, positions):\n",
-        "        \"\"\"\n",
-        "        Determines the state of each agent (moving or stationary).\n",
-        "        Args:\n",
-        "            positions: A tensor of shape (B*n_agent, t, 2) representing the ground truth positions of agents.\n",
-        "        Returns:\n",
-        "            A boolean tensor of shape (B*n_agent) indicating whether each agent is moving.\n",
-        "        \"\"\"\n",
-        "        x_std = ops.std(positions[:, :, 0], axis=1)\n",
-        "        y_std = ops.std(positions[:, :, 1], axis=1)\n",
-        "        agent_state_mask = ops.logical_or(x_std > 0.2, y_std > 0.2)\n",
-        "        return agent_state_mask\n",
-        "\n",
-        "    def random_undersample(self, agent_state, ratio=0.3):\n",
-        "        \"\"\"\n",
-        "        Randomly undersamples stationary agents to balance the dataset.\n",
-        "        Args:\n",
-        "            agent_state: A boolean tensor of shape (B*n_agent) indicating the state of each agent.\n",
-        "            ratio: The ratio of stationary objects to sample relative to moving objects.\n",
-        "\n",
-        "        Returns:\n",
-        "            A tensor of indices of sampled agents.\n",
-        "        \"\"\"\n",
-        "\n",
-        "        moving_indices = ops.where(agent_state)[0]\n",
-        "        stationary_indices = ops.where(ops.logical_not(agent_state))[0]\n",
-        "\n",
-        "        n_moving_object = ops.shape(moving_indices)[0]\n",
-        "        n_stationary_object = ops.shape(stationary_indices)[0]\n",
-        "\n",
-        "        sample_count = ops.minimum(n_stationary_object, ops.cast(ops.multiply(n_moving_object, ratio), \"int32\"))\n",
-        "        stationary_indices = stationary_indices[:sample_count]\n",
-        "        sampled_indices = ops.concatenate([moving_indices, stationary_indices])\n",
-        "\n",
-        "        return sampled_indices\n",
-        "\n",
-        "    def __call__(self, y_true, y_pred):\n",
-        "        \"\"\"\n",
-        "        Args:\n",
-        "            y_true: Ground truth positions with shape (B, n_agent, t, 3)\n",
-        "            y_pred: Predicted positions with  (B, n_agent, t, 2)\n",
-        "        \"\"\"\n",
-        "        B, n_agent, t, _ = ops.shape(y_true)\n",
-        "\n",
-        "        y_true = ops.reshape(y_true, (B*n_agent, t, -1))\n",
-        "        y_pred = ops.reshape(y_pred, (B*n_agent, t, -1))\n",
-        "\n",
-        "        positions_gt = y_true[:, :, :2]\n",
-        "        mask = ops.cast(y_true[:, :, 2], dtype='bool') # B*n_agent, t\n",
-        "\n",
-        "        agent_state = self.get_agent_state(positions_gt) # shape: (B, state) indicate whihc object is stationary\n",
-        "        sampled_indices = self.random_undersample(agent_state) # shape: B*n_agent\n",
-        "        # It's not allowed to use a tensor as an index in TensorFlow!\n",
-        "        reg_loss = self.reg_loss(ops.take(positions_gt, sampled_indices, axis=0), ops.take(y_pred, sampled_indices, axis=0))\n",
-        "        reg_loss = ops.where(ops.take(mask, sampled_indices, axis=0), reg_loss, 0.)\n",
-        "        \n",
-        "        \n",
-        "        stationary_weight = 0.3  \n",
-        "        w = ops.where(agent_state, 1, stationary_weight)          # (B*n_agent,)\n",
-        "        w = ops.take(w, sampled_indices, axis=0)\n",
-        "        w = ops.expand_dims(ops.cast(w, \"float32\"), axis=1)   # (B*n_agent, 1)\n",
-        "        \n",
-        "        reg_loss = reg_loss * w\n",
-        "        \n",
-        "\n",
-        "\n",
-        "        n_sampled = ops.shape(sampled_indices)[0]\n",
-        "        reg_loss = ops.divide(ops.sum(reg_loss), B*n_sampled*t)\n",
-        "\n",
-        "        return reg_loss"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 22,
       "metadata": {},
       "outputs": [
@@ -2314,6 +2232,13 @@
         "You need to be very careful to document all your changes to the code. Preferable with a \"STUDENT\" in a comment at the place of modifications.\n",
         "\n",
         "Easiest might be to make a copy of your file at this point and modify the second copy with the changes in this bonus part, and then hand in two colab files."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### A separate notebook is created for this  /Rickard Sörlin"
       ]
     }
   ],
